fixing image sizes

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -5,7 +5,9 @@
    "id": "7e7a60c6",
    "metadata": {},
    "source": [
-    "![](../reports/external_images/testing_gif.gif)"
+    "<div>\n",
+    "<img src=\"../reports/external_images/testing_gif.gif\" width=\"300\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -33,7 +35,9 @@
    "id": "10146047",
    "metadata": {},
    "source": [
-    "![](../reports/ppt/starting_point.png)"
+    "<div>\n",
+    "<img src=\"../reports/ppt/starting_point.png\" width=\"500\"/>\n",
+    "</div>\n"
    ]
   },
   {
@@ -55,7 +59,9 @@
    "id": "bbba0e0d",
    "metadata": {},
    "source": [
-    "![](../reports/ppt/base_layer.png)"
+    "<div>\n",
+    "<img src=\"../reports/ppt/base_layer.png\" width=\"500\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -306,7 +312,10 @@
     "\n",
     "In order to show the power of transfer-learning we chose the Oxford Flower 102 dataset, which can be found [here](https://www.robots.ox.ac.uk/~vgg/data/flowers/102/). This dataset contains, as the name suggests, 102 different categories of flowers in the United Kingdom. Each flower category contains between 40 and 258 images. Obviously, this amount of data is far too little in order to train a sophisticated neural network on it, which makes it a good testing example of transfer-learning.\n",
     "\n",
-    "![](../reports/external_images/flowers.jpeg)\n",
+    "<div>\n",
+    "<img src=\"../reports/external_images/flowers.jpeg\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
     "[Source](https://www.researchgate.net/figure/Examples-of-images-in-the-Oxford-Flower-102-Dataset-Corresponding-categories-are-given_fig7_318204948)"
    ]
   },
@@ -570,7 +579,9 @@
    "id": "e5722afc",
    "metadata": {},
    "source": [
-    "![](../reports/figures/sample_images.png)"
+    "<div>\n",
+    "<img src=\"../reports/figures/sample_images.png\" width=\"500\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -922,7 +933,9 @@
    "id": "0dc631e1",
    "metadata": {},
    "source": [
-    "![](../reports/figures/history_fine_tune_model.png)"
+    "<div>\n",
+    "<img src=\"../reports/figures/history_fine_tune_model.png\" width=\"700\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -938,7 +951,7 @@
    "id": "4261417f",
    "metadata": {},
    "source": [
-    "Finally we though it would be a nice to deploy the model on a mobile application, as that was also the motivation of choosing the MobileNetV2 network. In order to do so, one hast to convert the $h5$ format the model is currently saved as, into a $tflite$ file. Doing that compresses the model and brings it into the right format for the job. Furthermore, we have to sort and store all the labels into a text file and put them into the <code> Model </code> folder of the application parent folder.\n",
+    "Finally we though it would be a nice to deploy the model on a mobile application, as that was also the motivation of choosing the MobileNetV2 network. In order to do so, one hast to convert the <code>h5</code> format the model is currently saved as, into a <code>tflite</code> file. Doing that compresses the model and brings it into the right format for the job. Furthermore, we have to sort and store all the labels into a text file and put them into the <code> Model </code> folder of the application parent folder.\n",
     "    \n",
     "This app folder is pulled from the official tensorflow repository, found [here](https://github.com/tensorflow/examples/tree/master/lite/examples/image_classification/ios)."
    ]
@@ -1016,7 +1029,9 @@
     "scrolled": false
    },
    "source": [
-    "![](../reports/external_images/testing_gif.gif)"
+    "<div>\n",
+    "<img src=\"../reports/external_images/testing_gif.gif\" width=\"300\"/>\n",
+    "</div>"
    ]
   }
  ],
