--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -15,19 +15,21 @@
    "id": "7eb6dd51",
    "metadata": {},
    "source": [
-    "In this blog-post we are discussing the concept of transfer-learning and show an implementation using Python, using tensorflow. Namely, we are using the pre-trained model *MobileNetV2* and apply it on the *Oxford Flower 102* dataset, in order to build a flower classification model. Lastly we deploy it on an ios device to make live predictions, using the phone's camera. The Github Repository for this project can be found [here](https://github.com/paulmora-statworx/flower_detection).\n",
+    "In this blog-post we are discussing the concept of transfer-learning and show an implementation in Python, using tensorflow. Namely, we are using the pre-trained model *MobileNetV2* and apply it on the *Oxford Flower 102* dataset, in order to build a flower classification model. Lastly we deploy the trained model on an ios device to make live predictions, using the phone's camera. The Github Repository for this project can be found [here](https://github.com/paulmora-statworx/flower_detection).\n",
     "\n",
     "# Overview\n",
     "\n",
-    "The concept of transfer-learning is best understood when applying the concept to real-life examples. If, for example, a person dedicately practices playing the piano for multiple years, this person is going to have an easier time picking up guitar playing, compared to a person who never played a musical instrument before. It does not mean, of course, that the person is going to be perfect at playing the guitar, but the yearlong finger practice of playing piano and the development of having a good ear in music makes it easier for the person to learn.\n",
+    "The concept of transfer-learning is best understood when applying the concept to real-life examples. If, for example, a person dedicately practices playing the piano for many years, this person is going to have an easier time picking up guitar playing, compared to a person who never played any musical instrument before.\n",
+    "\n",
+    "That does not imply, of course, that the person who has prior piano experience is going to be perfect at playing the guitar right away, but the yearlong finger practice of playing piano and the development of having a good ear in music, makes it easier for that person to learn.\n",
     "\n",
     "It is important to note that these synergy effect were only possible because playing piano and playing the guitar were somewhat related. If the person who played piano for many years is now trying to learn to play American Football, it is rather less likely that this person will have an advantage. Hence, whether the previous training of concept A is beneficial for concept B, depends on whether concept A and B bear any similarities.\n",
     "\n",
-    "The very same idea and conclusions apply to transfer-learning. If we build a strong classification model to detect apples, the odds are high, that we also could use the same model to classify oranges. It might not be as strong as a model which was initially trained on oranges, but it is definitely better than a poor orange classification model.\n",
+    "The very same idea applies to transfer-learning. Let us assume that we have a model which is very strong in detecting whether an apple is portrayed in a given image. The chances are good that we could use this model and use it to detect pears as well. It will definitely not be as strong as a model which was trained entirely on pears, but in situation where we do not have that many trainings images of pears, it is better than nothing.\n",
     "\n",
-    "Again, this would only work because apples and oranges bear some similarities (e.g. roundness). Though, if we would try to use the apple classification model and apply it to detect cars, we are likely getting a poor performance. \n",
+    "That the apple detection would work also on detecting pears is only because apples and pears bear some common characteristics, like for example the color. If we would on the other hand, take the apple detection model and try to detect cars with it, we are likely getting a terrible performance.\n",
     "\n",
-    "The question might arise why we are not simply building a strong classification model using images of oranges. The reason for not doing could be multi-fold. It could be for example that we are lacking the computational power, the time, or even the amount of images needed to train a good-performing classification model. Especially the latter reason is a common problem within image detection."
+    "The question might arise why we are not simply building one model for each job respectively. One model for detecting apples, one model for detecting pears, and so on.  The reasons why this is sometimes not feasible are multi-fold. It could be for example that we are lacking the computational power, the time, or even the amount of images needed to train a good-performing classification model. Especially the latter reason is a common problem within image detection."
    ]
   },
   {
@@ -45,13 +47,13 @@
    "id": "87ee1b1a",
    "metadata": {},
    "source": [
-    "The reason why a small amount of images is leading to a poor performing model is easily understood when thinking about what the training of a neural network is actually doing. When initializing a neural network, all weight parameters are initialized in a random manner. Through the training process these weight parameters are adjusting, using back-propagation based on gradient descent. If we do not have enough images of the object we would like to classify, the network is not going to have a sufficient amount of data in order to adjust the weights appropriately.\n",
+    "The reason why a small amount of images leads to a poor performing model, is easily understood when considering workings of a neural network. When initializing a neural network, all weight parameters are initialized randomly. Through the training process these weight parameters are constantly adjusted, using back-propagation based on gradient descent. If we do not have enough images of the object we would like to classify, the network is not going to have a sufficient amount of data in order to adjust the weights appropriately.\n",
     "\n",
-    "Transfer-learning can then help in those situations. That is because of the workings of convolutional neural networks, which are the gold standard when working with image data. While many details of CNNs are not fully explored, we know that especially the lower levels of those models learn very general shapes and patterns of the images. In the final layers of the networks all these shapes and patterns are put together to make up for the final object. It is exactly that ability to detect shapes and patterns which are useful for not only the purposes the model was originally trained for, but for all kinds of use-cases.\n",
+    "Transfer-learning can then help in those situations. That is because of the workings of convolutional neural networks (CNNs), which are the gold standard when working with image data. While many details of CNNs are not fully explored, it is established that especially the lower levels of those models learn general shapes and patterns of the images. In the final layers of the networks all these shapes and patterns are put together to make up for the final object.\n",
     "\n",
-    "As mentioned before, the job of the last layers of the network is to put all the different shapes and patterns together and decides what this combination of many different aspects is most likely going to be. These last layers are, in contrast to the initial layers, very purpose specific. For that reason it is normally necessary to therefore stack one or several top layers on the pre-trained model and solely train those. The benefit of this method is that the ground-work was already done. One does not have to handcraft the jigsaw pieces anymore, but merely have to put them together.\n",
+    "When using a pre-trained model on a different domain than it was originally trained for, we cannot make use of the top-layers of the pre-trained model since they are too specific to the initial use-case. The lower-levels of the networks on the other hand, come very handy since detecting shapes and patterns is going to be needed for the new domain as well. \n",
     "\n",
-    "There are of course some restrictions when using this methodology. Firstly, it is necessary to pre-process the images in the very same way the pre-trained model did it. If, for example, the pre-trained model scaled all pixel values between 0 and 1 before training, we would have to do the very same with the new images we would like to classify, since the model would not know how to handle those otherwise. Though, we also have some freedom when using transfer-learning. If the pre-trained model originally was used to classify 50 different breeds of dogs, we could change that amount of categories, by replacing the top-layers with, for example, 30 different categories. "
+    "Therefore we simply separate the pre-trained model into two pieces. The first piece, the layers below the very top are referred to as the **base-model**, this job of these layers is to detect shapes and patterns and putting them together into a combination of such. The second piece are the top-layers. These layers are specific to the objects the model is classifying. This second piece is unwanted when changing the domain the model is supposed to classify, and therefore simply removed. Afterwards we stack on top of the base-model, one or several untrained layers, which comply with the number of categories we would like to classify within the new domain. That means, if the pre-trained model was originally trained to classify 50 different dog breeds, we can remove the last dense layer which outputs a vector with length 50, and add a layer with 30 categories, in order to classify 30 different cat breeds."
    ]
   },
   {
@@ -69,9 +71,11 @@
    "id": "9bfc0568",
    "metadata": {},
    "source": [
-    "When it comes to training the stacked top-layers discussed before, it is important to know that we are not interested in training the pre-trained model, but only the top-layers. Jointly training the pre-trained model with the randomly initialized top-layers would result in too large gradient updates, and the pre-trained model would forget what it originally learned.\n",
+    "When stacking one or more top-layers on top of the lower levels we have to re-train the entire model. It is important to note that we are solely intending to train the top-layers and not the base-model. We achieve that by freezing the weights of the base-model and therefore only train the newly added top layer with image data from the new domain. That is because jointly training the pre-trained model with the randomly initialized top-layers would result in too large gradient updates, and the pre-trained model would forget what it originally learned.\n",
     "\n",
-    "The above does not mean that we cannot further re-fine the model. After training the stacked top-layers we can then unfreeze some higher layers of the pre-trained models and train the entire model again. It is crucial at this point to use a smaller learning rate, in order to note cause large gradient updates which would shake the foundation of the model."
+    "Through that approach the model is much faster in correctly classifying the objects from the new domain, since it does not spend time with learning how to detect shapes and patterns, but solely on how to identify what the combination of such shapes and patterns represent.\n",
+    "\n",
+    "After training the top-layers we then can go one step further and train the entire model a bit more, by unfreezing the some top-layers of the base-model and re-train those as well. It is crucial at this point to use a smaller learning rate, in order to note cause large gradient updates which would shake the foundation of the model."
    ]
   },
   {
@@ -87,7 +91,7 @@
     "\n",
     "## Model architecture\n",
     "\n",
-    "In order to find out how this model is working under the hood, we take a look into the [original paper](https://arxiv.org/pdf/1801.04381v4.pdf). The graphic below shows the different layers which were used when initially training this model. Each line represents one layer, which is repeated *n* times."
+    "Before implementing that model right away, we take a look at its workings and what makes the model the better choice for being deployed on a mobile phone in contrast to any other model. For that we take a look at the [original paper](https://arxiv.org/pdf/1801.04381v4.pdf). More specifically, the model architecture of the network. The graphic below shows the different layers which were used when initially training this model. Each line represents one layer, which is repeated *n* times."
    ]
   },
   {
